2007-05-25  Denis Washington  <denisw@svn.gnome.org>

	* theme-thumbnail.c:
	Make gtk+ theme previews more compact.

2007-05-25  Denis Washington  <denisw@svn.gnome.org>

	* theme-thumbnail.[ch]:
	Add functions to generate thumbnails for specific types of themes, for
	instance a metacity theme thumbnail.

2007-05-24  Denis Washington  <denisw@svn.gnome.org>

	* gconf-property-editor.c: (peditor_tree_view_widget_changed):
	Scroll to new selected cell if the gconf value changes.

2007-05-23  Jens Granseuer  <jensgr@gmx.net>

	* wm-common.c: (wm_common_get_current_window_manager): make sure we
	always return a copy of the window manager name, not a static string
	(fixes bug #439244)

2007-05-19  Jens Granseuer  <jensgr@gmx.net>

	* gconf-property-editor.c: (peditor_tree_view_widget_changed):
	don't call gconf_value_free with a NULL value

2007-05-18  Jens Granseuer  <jensgr@gmx.net>

	* gconf-property-editor.c: (peditor_boolean_value_changed),
	(peditor_integer_value_changed), (peditor_string_value_changed),
	(peditor_color_value_changed), (peditor_select_menu_value_changed),
	(peditor_combo_box_value_changed),
	(peditor_select_radio_value_changed),
	(peditor_numeric_range_value_changed),
	(peditor_font_value_changed), (peditor_image_value_changed),
	(gconf_peditor_new_select_radio_with_enum),
	(peditor_tree_view_value_changed),
	(peditor_tree_view_widget_changed), (gconf_peditor_new_tree_view):
	* gconf-property-editor.h: add a property editor for GtkTreeView
	and fix crashes with all peditors if the requested key is not
	available

2007-05-09  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (gnome_theme_read_meta_theme):
	* gtkrc-utils.c: (gtkrc_find_named), (gtkrc_get_color_scheme): fix
	memory leaks

	* gnome-theme-test.c: (main): init g_thread

2007-05-09  Jens Granseuer  <jensgr@gmx.net>

	* gconf-property-editor.c: (gconf_peditor_new),
	(gconf_peditor_new_boolean), (gconf_peditor_new_integer_valist),